apps/base/syncthing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: syncthing
spec:
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
      - name: syncthing
        image: syncthing/syncthing
        volumeMounts:
        - mountPath: "/var/syncthing"
          name: synced
        ports:
        - name: tcpsync
          containerPort: 22000
          protocol: TCP
        - name: udpsync
          containerPort: 22000
          protocol: UDP
        - name: webconf
          containerPort: 8384
          protocol: TCP
      volumes:
      - name: synced
        persistentVolumeClaim:
          claimName: syncthing-synced
      nodeSelector:
        node-role.kubernetes.io/control-plane: "true"
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-sync
  namespace: syncthing
spec:
  selector:
    app: syncthing
  type: LoadBalancer
  ports:
  - name: tcpsync
    protocol: TCP
    port: 22000
    targetPort: tcpsync
  - name: udpsync
    protocol: UDP
    port: 22000
    targetPort: udpsync
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-webconf
  namespace: syncthing
spec:
  selector:
    app: syncthing
  ports:
  - name: webconf
    protocol: TCP
    port: 8384
    targetPort: webconf
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: syncthing-auth
  namespace: syncthing
spec:
  basicAuth:
    secret: syncthing-basic-auth
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: syncthing-redirect
  namespace: syncthing
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing-webconf
  namespace: syncthing
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: syncthing-syncthing-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: "syncthing"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: syncthing-webconf
            port:
              number: 8384
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing-redirect
  namespace: syncthing
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: syncthing-syncthing-redirect@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: "syncthing"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: syncthing-webconf
            port:
              number: 8384
